Fix placement of scrollbar on plugin management screen
Fixes #1267

--- a/frontend/src/core/pluginManagement/less/pluginManagement.less
+++ b/frontend/src/core/pluginManagement/less/pluginManagement.less
@@ -1,3 +1,7 @@
+.pluginManagement {
+  overflow-y: scroll;
+}
+
 .pluginManagement-loading {
     text-align:center;
     padding:30px;
